@@ -1,12 +1,12 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin crosshair n 1.0.1]
+[manpage_begin crosshair n 1.0.2]
 [copyright {2003 Kevin Kenny}]
 [copyright {2008 (docs) Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   Crosshairs]
 [titledesc {Crosshairs for Tk canvas}]
 [require Tcl [opt 8.4]]
 [require Tk  [opt 8.4]]
-[require crosshair [opt 1.0.1]]
+[require crosshair [opt 1.0.2]]
 [keywords canvas cross-hairs tracking viewport location]
 
 [description]
